renamed SensorReading to Reading, renamed some files to reflect change
