# models/Reading.js
@@ -2,7 +2,7 @@ import mongoose from 'mongoose'
 
 const Schema = mongoose.Schema
 
-const SensorReadingSchema = new Schema({
+const ReadingSchema = new Schema({
     id: mongoose.Types.ObjectId,
     createdAt: Date,
     action: {
@@ -13,6 +13,6 @@ const SensorReadingSchema = new Schema({
     data: Number
 })
 
-const SensorReading = mongoose.model('SensorReading', SensorReadingSchema)
+const Reading = mongoose.model('Reading', ReadingSchema)
 
-export default SensorReading
+export default Reading
