# models/Sensor.js
@@ -1,5 +1,5 @@
 import mongoose from 'mongoose'
-import SensorReading from './SensorReading'
+import Reading from './Reading'
 
 const Schema = mongoose.Schema
 
@@ -7,7 +7,7 @@ const SensorSchema = new Schema({
     id: mongoose.Types.ObjectId,
     type: String,
     createdAt: Date,
-    sensorReadings: [SensorReading.schema]
+    readings: [Reading.schema]
 })
 
 const Sensor = mongoose.model('Sensor', SensorSchema)
